# desktopentries

./: Cargo.toml  LICENSE  README.md
src/: checker.rs  configuration.rs  entry.rs  main.rs
